--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<!-- saved from url=(0048)file:///C:/Users/Jake/Website/index.html#contact -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -10,31 +9,31 @@
     <title>Stylish Portfolio Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="file:///E:/Bootstrap/stylish-portfolio/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="file:///E:/Bootstrap/stylish-portfolio/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="file:///E:/Bootstrap/stylish-portfolio/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- Side Menu -->
-    <a id="menu-toggle" href="#" class="btn btn-primary btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-primary btn-lg toggle"><i class="fa fa-bars"></i></a>
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand"><a href="http://startbootstrap.com">Start Bootstrap</a>
+            <a id="menu-close" href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+            <li class="sidebar-brand"><a href="http://startbootstrap.com/">Start Bootstrap</a>
             </li>
-            <li><a href="#top">Home</a>
+            <li><a href="file:///E:/Bootstrap/stylish-portfolio/index.html#top">Home</a>
             </li>
-            <li><a href="#about">About</a>
+            <li><a href="file:///E:/Bootstrap/stylish-portfolio/index.html#about">About</a>
             </li>
-            <li><a href="#services">Services</a>
+            <li><a href="file:///E:/Bootstrap/stylish-portfolio/index.html#services">Services</a>
             </li>
-            <li><a href="#portfolio">Portfolio</a>
+            <li><a href="file:///E:/Bootstrap/stylish-portfolio/index.html#portfolio">Portfolio</a>
             </li>
-            <li><a href="#contact">Contact</a>
+            <li><a href="file:///E:/Bootstrap/stylish-portfolio/index.html#contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -47,7 +46,14 @@
             <h3>
                 <em>We</em> Build Great Templates,
                 <em>You</em> Make Them Better</h3>
-            <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
+            <ul class="list-inline intro-social-buttons">
+                            <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            </li>
+                            <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            </li>
+                            <li><a href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            </li>
+                        </ul>
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
@@ -128,16 +134,16 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                        <a href="file:///C:/Users/Jake/Website/index_files/index.html">
+                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-1.jpg">
                         </a>
                         <h4>Cityscape</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                        <a href="file:///C:/Users/Jake/Website/index_files/index.html">
+                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-2.jpg">
                         </a>
                         <h4>Is That On Fire?</h4>
                     </div>
@@ -146,16 +152,16 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                        <a href="file:///C:/Users/Jake/Website/index_files/index.html">
+                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-3.jpg">
                         </a>
                         <h4>Stop Sign</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                        <a href="file:///C:/Users/Jake/Website/index_files/index.html">
+                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-4.jpg">
                         </a>
                         <h4>Narrow Focus</h4>
                     </div>
@@ -171,8 +177,8 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-default">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-primary">Look at Me!</a>
+                    <a href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-lg btn-default">Click Me!</a>
+                    <a href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-lg btn-primary">Look at Me!</a>
                 </div>
             </div>
         </div>
@@ -180,14 +186,7 @@
     <!-- /Call to Action -->
 
     <!-- Map -->
-    <div id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-        </iframe>
-    </div>
+    
     <!-- /Map -->
 
     <!-- Footer -->
@@ -204,10 +203,10 @@
                         </li>
                     </ul>
                     <div class="top-scroll">
-                        <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
+                        <a href="file:///E:/Bootstrap/stylish-portfolio/index.html#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
                     </div>
                     <hr>
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright © Company 2013</p>
                 </div>
             </div>
         </div>
@@ -215,8 +214,8 @@
     <!-- /Footer -->
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="./index_files/jquery-1.10.2.js"></script>
+    <script src="./index_files/bootstrap.js"></script>
 
     <!-- Custom JavaScript for the Side Menu and Smooth Scrolling -->
     <script>
@@ -249,6 +248,7 @@
     });
     </script>
 
-</body>
 
-</html>
+
+
+</body></html>
