--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0048)file:///C:/Users/Jake/Website/index.html#contact -->
+<!-- saved from url=(0040)file:///C:/Users/Jake/Website/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +9,12 @@
     <title>Stylish Portfolio Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///E:/Bootstrap/stylish-portfolio/css/bootstrap.css" rel="stylesheet">
+    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///E:/Bootstrap/stylish-portfolio/css/stylish-portfolio.css" rel="stylesheet">
-    <link href="file:///E:/Bootstrap/stylish-portfolio/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-</head>
+    <link href="file:///C:/Users/Jake/Website/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="file:///C:/Users/Jake/Website/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<style type="text/css"></style></head>
 
 <body>
 
@@ -42,16 +42,15 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
         <div class="vert-text">
-            <h1>Start Bootstrap</h1>
+            <h1>Jake Tsuyemura</h1>
             <h3>
-                <em>We</em> Build Great Templates,
-                <em>You</em> Make Them Better</h3>
+                <em>Designer Innovator Engineer</em></h3>
             <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <li><a href="https://twitter.com/JakeTsuyemura" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
-                            <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <li><a href="https://github.com/jaket6" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
-                            <li><a href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <li><a href="https://www.linkedin.com/profile/view?id=338026846" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                         </ul>
         </div>
@@ -76,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>Our Services</h2>
+                    <h2>My Skills</h2>
                     <hr>
                 </div>
             </div>
@@ -117,8 +116,11 @@
     <!-- Callout -->
     <div class="callout">
         <div class="vert-text">
-            <h1>A Dramatic Text Area</h1>
-        </div>
+<h1><em>"Live as if you were to die tomorrow</em></h1>
+<h1><em>Learn as if you were to live forever"</em></h1>
+<h2><em>~ Mahatma Gandhi</em></h2>
+
+</div>
     </div>
     <!-- /Callout -->
 
@@ -127,7 +129,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>Our Work</h2>
+                    <h2>My Work</h2>
                     <hr>
                 </div>
             </div>
@@ -135,17 +137,17 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-1.jpg">
+                            <img src="./index_files/portfolio-1.jpg" class="img-portfolio img-responsive">
                         </a>
-                        <h4>Cityscape</h4>
+                        <h4>Projects</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-2.jpg">
+                            <img class="img-portfolio img-responsive" src="./index_files/blog.jpg">
                         </a>
-                        <h4>Is That On Fire?</h4>
+                        <h4>Blog</h4>
                     </div>
                 </div>
             </div>
@@ -153,9 +155,9 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img class="img-portfolio img-responsive" src="./index_files/portfolio-3.jpg">
+                            <img class="img-portfolio img-responsive" src="./index_files/experience.jpg">
                         </a>
-                        <h4>Stop Sign</h4>
+                        <h4>Experience</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -163,7 +165,7 @@
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
                             <img class="img-portfolio img-responsive" src="./index_files/portfolio-4.jpg">
                         </a>
-                        <h4>Narrow Focus</h4>
+                        <h4>Future</h4>
                     </div>
                 </div>
             </div>
@@ -206,7 +208,7 @@
                         <a href="file:///E:/Bootstrap/stylish-portfolio/index.html#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
                     </div>
                     <hr>
-                    <p>Copyright © Company 2013</p>
+                    <p>Copyright © Jake Tsuyemura 2014</p>
                 </div>
             </div>
         </div>
