--- a/Stylish Portfolio Template for Bootstrap.htm
+++ b/Stylish Portfolio Template for Bootstrap.htm
@@ -86,14 +86,14 @@
                     <div class="service-item">
                         <i class="service-icon fa fa-lightbulb-o"></i>
                         <h4>Innovative Ideas</h4>
-                        <p>Need to design a new product or attack the problem from a different angle? Take a look at the Projects section and see what I've been working on.</p>
+                        <p>Need to design a new product or approach the problem from a different angle? Take a look at the Projects section and see what I've been working on.</p>
                     </div>
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
                         <i class="service-icon fa fa-gears"></i>
                         <h4>Problem Solving</h4>
-                        <p>Is your idea on paper running into real life obstacles? Allow me to take a look and fix that for you. Thats what an engineer does after all!</p>
+                        <p>Is your idea on paper running into real life obstacles? Allow me to take a look and fix that for you. Thats what an engineer does after all.</p>
                     </div>
                 </div>
                 <div class="col-md-2 text-center">
@@ -107,7 +107,7 @@
                     <div class="service-item">
                         <i class="service-icon fa fa-desktop"></i>
                         <h4>Software</h4>
-                        <p>Does your company need me to learn a new software? I already know some C, Java, Html, and Css. Just look at this website if you need some proof!</p>
+                        <p>Need me to learn a new software? I already know some C, Java, Html, and Css. Just look at this website if you need some proof!</p>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img src="./index_files/Projects.jpg" class="img-portfolio img-responsive">
+                            <img src="./Stylish Portfolio Template for Bootstrap_files/Projects.jpg" class="img-portfolio img-responsive">
                         </a>
                         <h4>Projects</h4>
                     </div>
@@ -147,7 +147,7 @@
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img class="img-portfolio img-responsive" src="./index_files/blog.jpg">
+                            <img class="img-portfolio img-responsive" src="./Stylish Portfolio Template for Bootstrap_files/blog.jpg">
                         </a>
                         <h4>Blog</h4>
                     </div>
@@ -157,7 +157,7 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img class="img-portfolio img-responsive" src="./index_files/experience.jpg">
+                            <img class="img-portfolio img-responsive" src="./Stylish Portfolio Template for Bootstrap_files/experience.jpg">
                         </a>
                         <h4>Experience</h4>
                     </div>
@@ -165,7 +165,7 @@
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="file:///C:/Users/Jake/Website/index_files/index.html">
-                            <img class="img-portfolio img-responsive" src="./index_files/future.jpg">
+                            <img class="img-portfolio img-responsive" src="./Stylish Portfolio Template for Bootstrap_files/future.jpg">
                         </a>
                         <h4>Future</h4>
                     </div>
@@ -180,7 +180,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h3>Want an updated version of my resume?</h3>
+                    <h3>Do you want an updated version of my resume?</h3>
                     
                     <a href="file:///C:/Users/Jake/Website/index_files/index.html" class="btn btn-lg btn-primary">Click Here!</a>
                 </div>
@@ -225,8 +225,8 @@
     <!-- /Footer -->
 
     <!-- JavaScript -->
-    <script src="./index_files/jquery-1.10.2.js"></script>
-    <script src="./index_files/bootstrap.js"></script>
+    <script src="./Stylish Portfolio Template for Bootstrap_files/jquery-1.10.2.js"></script>
+    <script src="./Stylish Portfolio Template for Bootstrap_files/bootstrap.js"></script>
 
     <!-- Custom JavaScript for the Side Menu and Smooth Scrolling -->
     <script>
