Changed Links to www.

--- a/About.htm
+++ b/About.htm
@@ -7,14 +7,14 @@
     <meta name="author" content="">
 
     <title>About</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/About_files/Abouticon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/About_files/Abouticon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/stylish-portfolio.css" rel="stylesheet">
-    <link href="file:///C:/Users/Jake/Website/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,19 +28,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="file:///C:/Users/Jake/Website/index.htm">Jake Tsuyemura</a>
+                <a class="navbar-brand" href="http://www.jaketsuyemura.com/index.htm">Jake Tsuyemura</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="./About_files/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Projects.htm">Projects</a>
+                    <li><a href="http://www.jaketsuyemura.com/Projects.htm">Projects</a>
                     </li>
-  <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blogs</a>
+  <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blogs</a>
                     </li>
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                     
                 </ul>
@@ -59,7 +59,7 @@
                     <small>It's Nice to Meet You!</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="file:///E:/Bootstrap/modern-business/www.jaketsuyemura.com">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/">Home</a>
                     </li>
                     <li class="active">About</li>
                 </ol>
@@ -93,7 +93,7 @@
             </div>
 
             <div class="col-sm-4">
-  <a href="file:///C:/Users/Jake/Website/Projects.htm">
+  <a href="http://www.jaketsuyemura.com/Projects.htm">
                 <img class="img-responsive" src="./About_files/Projects.jpg">
   </a>
                 <h3>Projects
@@ -103,7 +103,7 @@
             </div>
 
             <div class="col-sm-4">
-  <a href="file:///C:/Users/Jake/Website/Blog.htm">
+  <a href="http://www.jaketsuyemura.com/Blog.htm">
              <img class=" img-responsive" src="./About_files/blog.jpg" a=""></a>
                 <h3>Blog</h3>
                 <p>Want to hear me ramble on about anything from Colts playcalling to GitHub installation? Check it out.</p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="col-sm-4">
-  <a href="file:///C:/Users/Jake/Website/Experience.htm">
+  <a href="http://www.jaketsuyemura.com/Experience.htm">
                 <img class="img-responsive" src="./About_files/experience.jpg">
   </a>
                 <h3>Experience</h3>
@@ -205,7 +205,7 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h3>Want an updated version of my resume?</h3>
                     
-                    <a href="file:///C:/Users/Jake/Website/Tsuyemura_Resume_Summer_2014.pdf" class="btn btn-lg btn-primary">Click Here!</a>
+                    <a href="http://www.jaketsuyemura.com/tsuyemuraresumesummer2014.pdf" class="btn btn-lg btn-primary">Click Here!</a>
                 </div>
             </div>
         </div>
