--- a/Blog.htm
+++ b/Blog.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Blog</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website//Blog_files/blogicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Blog_files/blogicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.htm">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Projects.htm">Projects</a>
+                    <li><a href="http://www.jaketsuyemura.com/Projects.htm">Projects</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
                     </h2>
                     <p>Have you heard of GitHub before? &nbsp;Good. &nbsp;This is a step-by-step process of how I setup my first GutHub account and working directory. This blog takes the form of a tutorial but serves as a log of how I performed my first <i>add, commit,</i> and <i>push.</i></p>
 
-                    <a href="file:///C:/Users/Jake/Website/LearningHowToGit.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/LearningHowToGit.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 
