--- a/Experience - Akamai Intership.htm
+++ b/Experience - Akamai Intership.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Experience - Akamai Intership</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Experience_files/experienceicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Experience_files/experienceicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Projects.htm">Projects</a>
+<li><a href="http://www.jaketsuyemura.com/Projects.htm">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -84,13 +84,13 @@
 <p align="justify">Along with the technical knowledge that i gained through the internship i was introduced to the skills needed to succeed in the workplace environment such as promptness, full time work ethic, and meeting the six week deadline.<br><br></p>
 <p align="justify">The project was a success and the PID controller was able to regulate the internal temperature of the test enclosure to within one degree celsius under a range of operating conditions. The Matlab method i discovered was able to produce PID coefficients which met the strict specifications while only requiring one day of data collection. Now the expensive and delicate astronomical systems atop the summit of Mauna Kea had an adequate cooling system which could be applied to an enclosure of any size and shape without the worry of overheating and damaging the equipment</p><br><br>
 <p>
-  <a href="file:///C:/Users/Jake/Website/Projects%20-%20Temperature%20Controller.htm">Link to Internship Project</a>
+  <a href="http://www.jaketsuyemura.com/Projects%20-%20Temperature%20Controller.htm">Link to Internship Project</a>
 </p>
 
 <br><br>
 
 
-                    <a href="file:///C:/Users/Jake/Website/Experience.htm" class="btn btn-default btn-lg">Back to Experience</a>
+                    <a href="http://www.jaketsuyemura.com/Experience.htm" class="btn btn-default btn-lg">Back to Experience</a>
                     
                 </div>
 
