--- a/Experience - EE 211 Teaching Assistant.htm
+++ b/Experience - EE 211 Teaching Assistant.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Experience - EE 211 Teaching Assistant</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Experience_files/experienceicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Experience_files/experienceicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Projects.htm">Projects</a>
+<li><a href="http://www.jaketsuyemura.com/Projects.htm">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -87,7 +87,7 @@
 - Patience handle student with their first introduction to Engineering Labs
   <br><br></p>
 
-                    <a href="file:///C:/Users/Jake/Website/Experience.htm" class="btn btn-default btn-lg">Back to Experience</a>
+                    <a href="http://www.jaketsuyemura.com/Experience.htm" class="btn btn-default btn-lg">Back to Experience</a>
                     
                 </div>
 
