--- a/Experience - EE 323 Teaching Assistant.htm
+++ b/Experience - EE 323 Teaching Assistant.htm
@@ -8,13 +8,13 @@
 
     <title>Experience - EE 323 Teaching Assistant</title>
 
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Experience_files/experienceicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Experience_files/experienceicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,15 +37,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Projects.htm">Projects</a>
+<li><a href="http://www.jaketsuyemura.com/Projects.htm">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@ gain, and input impedances, large regional distortion<br><br></p>
 - Honesty to grade fairly and indiscriminately based solely on content<br>
 - Patience to deal with students of different learning speeds<br><br></p>
 
-                    <a href="file:///C:/Users/Jake/Website/Experience.htm" class="btn btn-default btn-lg">Back to Experience</a>
+                    <a href="http://www.jaketsuyemura.com/Experience.htm" class="btn btn-default btn-lg">Back to Experience</a>
                     
                 </div>
 
