--- a/Projects - Arduino Breathalyzer.htm
+++ b/Projects - Arduino Breathalyzer.htm
@@ -10,10 +10,10 @@
 
     <!-- Bootstrap core CSS -->
     <title>Projects - Arduino Breathalyzer</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Projects_files/tabicon.ico"><link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Projects_files/tabicon.ico"><link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                 </ul>
             </div>
@@ -160,7 +160,7 @@ The availible software libraries were open-source and came from the DrinkShield 
   around a pair of palm trees. A demo is performed by blowing an equivalent of pure Tequila 
   directly onto the MQ-3 sensor. This registered a maximum score which activated all 8 strings
   of lights.
-<br><br></p><iframe width="420" height="315" src="./Projects - Arduino Breathalyzer_files/saved_resource.htm" frameborder="0" allowfullscreen=""></iframe>
+<br><br></p><object width="420" height="315"><param name="movie" value="//www.youtube.com/v/jjLJ8guW4sA?hl=en_US&amp;version=3&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/jjLJ8guW4sA?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="420" height="315" allowscriptaccess="always" allowfullscreen="true"></object>
 
 
 
@@ -183,7 +183,7 @@ The availible software libraries were open-source and came from the DrinkShield 
 <a href="http://www.amazon.com/SainSmart-8-CH-8-Channel-Relay-Module/dp/B0057OC5WK">SainSmart 8-channel Relay</a>
 </p><p>
 <a href="http://www.amazon.com/Arduino-UNO-board-DIP-ATmega328P/dp/B006H06TVG">Arduino Uno</a>
-</p><br><br><a href="file:///C:/Users/Jake/Website/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
+</p><br><br><a href="http://www.jaketsuyemura.com/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
 
 <hr>
                 </div>
