--- a/Projects - Micromouse.htm
+++ b/Projects - Micromouse.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Projects - Micromouse</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Projects_files/tabicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Projects_files/tabicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Expereince</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Expereince</a>
                     </li>
                 </ul>
             </div>
@@ -194,7 +194,7 @@ The group dynamics and time management aspects of this project proved to be valu
 <a href="http://ww1.microchip.com/downloads/en/DeviceDoc/39626e.pdf">PIC Microchip Datasheet</a>
 </p><p>
 <a href="http://www.jameco.com/1/1/3285-57bygh001-r-4-phase-unipolar-stepper-motor-rated-voltage-5vdc.html">Stepper Motors</a>
-</p><br><br><a href="file:///C:/Users/Jake/Website/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
+</p><br><br><a href="http://www.jaketsuyemura.com/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
 
 <hr>
                 </div>
