--- a/Projects - SmartStrip.htm
+++ b/Projects - SmartStrip.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Projects - SmartStrip</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Projects_files/tabicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Projects_files/tabicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                 </ul>
             </div>
@@ -205,7 +205,7 @@ final weeks of the semester making a custom printed case impossible.
 
 <p align="justify"><br>With the assembly completed, our final design accomplished all of the goals
   which were set at beginning of the project. 
-<br><br></p><iframe width="420" height="315" src="./Projects - SmartStrip_files/saved_resource.htm" frameborder="0" allowfullscreen=""></iframe>
+<br><br></p><object width="420" height="315"><param name="movie" value="//www.youtube.com/v/KA3slOJM5CU?version=3&amp;hl=en_US&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/KA3slOJM5CU?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="420" height="315" allowscriptaccess="always" allowfullscreen="true"></object>
 
 
 
@@ -245,7 +245,7 @@ final weeks of the semester making a custom printed case impossible.
 <a href="http://www.amazon.com/Arduino-UNO-board-DIP-ATmega328P/dp/B006H06TVG">Arduino Uno</a>
 </p><p>
 <a href="http://www.amazon.com/Arduino-Wireless-Bluetooth-Transceiver-Module/dp/B0093XAV4U/ref=sr_1_1?ie=UTF8&qid=1400902304&sr=8-1&keywords=hc+06">Bluetooth Module</a>
-</p><br><br><a href="file:///C:/Users/Jake/Website/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
+</p><br><br><a href="http://www.jaketsuyemura.com/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
 
 <hr>
                 </div>
