--- a/Projects.htm
+++ b/Projects.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Projects</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Projects_files/tabicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Projects_files/tabicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.htm">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                     </h2>
                     <p>This Senior Design Project allows users to control plug-in appliances from an application on their phones. Technologies such as current sensing transformers, micro-controllers, Bluetooth modules, and app development &nbsp;were combined into a fully functioning final product.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Projects%20-%20SmartStrip.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Projects%20-%20SmartStrip.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 <div class="col-lg-12 text-center">
@@ -80,7 +80,7 @@
                     </h2>
                     <p>This weekend project was put together as a potential centerpiece for the IEEE Student Banquet. It may not have been chosen, but it will sure to brighten up any boring room.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Projects%20-%204x4x4x%20LED%20Cube.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Projects%20-%204x4x4x%20LED%20Cube.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 <div class="col-lg-12 text-center">
@@ -90,7 +90,7 @@
                     </h2>
                     <p>Want to know how drunk you are? &nbsp;Then have it visualized through and array of flashing Christmas lights? Then take a look at the winning project from UH Manoa Holmescoming 2014.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Projects%20-%20Arduino%20Breathalyzer.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Projects%20-%20Arduino%20Breathalyzer.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 <div class="col-lg-12 text-center">
@@ -100,7 +100,7 @@
                     </h2>
                     <p>Observatory equipment at the summit of Mauna Kea is sensitive wide fluctuations in temperature. This project, assembled during the Akamai Internship, uses a cascaded PID controller to keep variations within 1 degree C during operation.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Projects%20-%20Temperature%20Controller.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Projects%20-%20Temperature%20Controller.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 <div class="col-lg-12 text-center">
@@ -110,7 +110,7 @@
                     </h2>
                     <p>Graphene. &nbsp;The material of the future. &nbsp;Take a look at our Junior Design Project which attempts to synthesize the 2-Dimensional material alternative low cost methods.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Projects%20-%20Graphene%20Synthesis.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Projects%20-%20Graphene%20Synthesis.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div><div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="./Projects_files/boardlayout.jpg" alt="">
@@ -119,7 +119,7 @@
                     </h2>
                     <p>Need to small autonomous robot to navigate a 16x16 maze? &nbsp;Great! &nbsp;This Sophomore Design Project was team&nbsp;<i>Tobuscus'</i>&nbsp;first attempt at right-wall-hugging. &nbsp;Sensors, soldering, and programming were just a few issues we had to overcome.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Projects%20-%20Micromouse.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Projects%20-%20Micromouse.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 
