--- a/index.htm
+++ b/index.htm
@@ -7,14 +7,14 @@
     <meta name="author" content="">
 
     <title>Jake Tsuyemura - Personal Website</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/index_files/indexicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/index_files/indexicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/stylish-portfolio.css" rel="stylesheet">
-    <link href="file:///C:/Users/Jake/Website/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <style type="text/css"></style></head>
 
 <body>
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
-                        <a href="file:///C:/Users/Jake/Website/Projects.htm">
+                        <a href="http://www.jaketsuyemura.com/Projects.htm">
                             <img src="./index_files/Projects.jpg" class="img-portfolio img-responsive">
                         </a>
                         <h4>Projects</h4>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
-                        <a href="file:///C:/Users/Jake/Website/Blog.htm">
+                        <a href="http://www.jaketsuyemura.com/Blog.htm">
                             <img class="img-portfolio img-responsive" src="./index_files/blog.jpg">
                         </a>
                         <h4>Blog</h4>
@@ -157,7 +157,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
-                        <a href="file:///C:/Users/Jake/Website/Experience.htm">
+                        <a href="http://www.jaketsuyemura.com/Experience.htm">
                             <img class="img-portfolio img-responsive" src="./index_files/experience.jpg">
                         </a>
                         <h4>Experience</h4>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
-                        <a href="file:///C:/Users/Jake/Website/About.htm">
+                        <a href="http://www.jaketsuyemura.com/About.htm">
                             <img class="img-portfolio img-responsive" src="./index_files/About.jpg">
                         </a>
                         <h4>About</h4>
@@ -183,7 +183,7 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h3>Want an updated version of my resume?</h3>
                     
-                    <a href="file:///C:/Users/Jake/Website/Tsuyemura_Resume_Summer_2014.pdf" class="btn btn-lg btn-primary">Click Here!</a>
+                    <a href="http://www.jaketsuyemura.com/tsuyemuraresumesummer2014.pdf" class="btn btn-lg btn-primary">Click Here!</a>
                 </div>
             </div>
         </div>
@@ -226,8 +226,8 @@
     <!-- /Footer -->
 
     <!-- JavaScript -->
-    <script src="file:///C:/Users/Jake/Website/index_files/jquery-1.10.2.js"></script>
-    <script src="file:///C:/Users/Jake/Website/index_files/bootstrap.js"></script>
+    <script src="./index_files/jquery-1.10.2.js"></script>
+    <script src="./index_files/bootstrap.js"></script>
 
     <!-- Custom JavaScript for the Side Menu and Smooth Scrolling -->
     <script>
