--- a/Experience.htm
+++ b/Experience.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Experience</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Experience_files/experienceicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Experience_files/experienceicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Projects.htm">Projects</a>
+<li><a href="http://www.jaketsuyemura.com/Projects.htm">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                     </h2>
                     <p>Learn more about my experience teaching an EE 323L lab section at the University of Hawaii at Manoa during the Spring 2014 semester.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Experience%20-%20EE%20323%20Teaching%20Assistant.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Experience%20-%20EE%20323%20Teaching%20Assistant.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 <div class="col-lg-12 text-center">
@@ -80,7 +80,7 @@
                     </h2>
                     <p>Learn more about my experience teaching an EE 211L lab section at the University of Hawaii at Manoa during the Spring 2014 semester.</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Experience%20-%20EE%20211%20Teaching%20Assistant.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Experience%20-%20EE%20211%20Teaching%20Assistant.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 <div class="col-lg-12 text-center">
@@ -90,7 +90,7 @@
                     </h2>
                     <p>Learn more about my experience interning at the Smithsonian Submillimeter Array under the guidance of the Akamai Workforce Initiative.&nbsp;</p>
 
-                    <a href="file:///C:/Users/Jake/Website/Experience%20-%20Akamai%20Intership.htm" class="btn btn-default btn-lg">Read More</a>
+                    <a href="http://www.jaketsuyemura.com/Experience%20-%20Akamai%20Intership.htm" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
 
