--- a/Projects - 4x4x4x LED Cube.htm
+++ b/Projects - 4x4x4x LED Cube.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Projects - 4x4x4x LED Cube</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Projects_files/tabicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Projects_files/tabicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                 </ul>
             </div>
@@ -154,7 +154,7 @@
 <a href="http://www.youtube.com/watch?v=7iKR3QbRq74">Youtube Assemble Tutorial</a>
 </p><p>
 <a href="http://www.youtube.com/watch?v=QBONPlhAD_E">Youtube Cube Demo</a>
-</p><br><br><a class="btn btn-default btn-lg" href="file:///C:/Users/Jake/Website/Projects.htm">Back to Projects</a>
+</p><br><br><a class="btn btn-default btn-lg" href="http://www.jaketsuyemura.com/Projects.htm">Back to Projects</a>
 
 <hr>
                 </div>
