--- a/Projects - Graphene Synthesis.htm
+++ b/Projects - Graphene Synthesis.htm
@@ -7,13 +7,13 @@
     <meta name="author" content="">
 
     <title>Projects - Graphene Synthesis</title>
-<link rel="shortcut icon" href="file:///C:/Users/Jake/Website/Projects_files/tabicon.ico">
+<link rel="shortcut icon" href="http://www.jaketsuyemura.com/Projects_files/tabicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link href="file:///C:/Users/Jake/Website/css/bootstrap.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="file:///C:/Users/Jake/Website/css/business-casual.css" rel="stylesheet">
+    <link href="http://www.jaketsuyemura.com/css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,15 +36,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="file:///C:/Users/Jake/Website/index.html">Home</a>
+                    <li><a href="http://www.jaketsuyemura.com/index.htm">Home</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/About.htm">About</a>
+                    <li><a href="http://www.jaketsuyemura.com/About.htm">About</a>
                     </li>
-                    <li><a href="file:///C:/Users/Jake/Website/Blog.htm">Blog</a>
+                    <li><a href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
                     </li>
                     
 
-<li><a href="file:///C:/Users/Jake/Website/Experience.htm">Experience</a>
+<li><a href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
                     </li>
                 </ul>
             </div>
@@ -204,7 +204,7 @@ Though we were unable to successfully recreate the UCLA experimental method, out
 <a href="http://en.wikipedia.org/wiki/Graphene">Introduction to Graphene</a>
 </p><p>
 <a href="http://www.graphenea.com/pages/graphene-uses-applications#.U4V8s_ldXuo">Graphene Applications</a>
-</p><br><br><a href="file:///C:/Users/Jake/Website/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
+</p><br><br><a href="http://www.jaketsuyemura.com/Projects.htm" class="btn btn-default btn-lg">Back to Projects</a>
 
 <hr>
                 </div>
