--- a/Experience - EE 323 Teaching Assistant.htm
+++ b/Experience - EE 323 Teaching Assistant.htm
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="file:///E:/Bootstrap/business-casual/index.html">Business Casual</a>
+                <a class="navbar-brand" href="http://www.jaketsuyemura.com/Experience.htm">Experience</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
