--- a/LearningHowToGit.htm
+++ b/LearningHowToGit.htm
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="file:///E:/Bootstrap/business-casual/index.html">Business Casual</a>
+                <a class="navbar-brand" href="http://www.jaketsuyemura.com/Blog.htm">Blog</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
